--- a/jwang/notes2/test_pp.ipynb
+++ b/jwang/notes2/test_pp.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "import andes\n",
     "import numpy as np\n",
-    "from andes.interop.pandapower import to_pandapower, make_link_table, runopp_map\n",
+    "from andes.interop.pandapower import to_pandapower, make_link_table, runopp_map, build_group_table\n",
     "from andes.interop.pandapower import add_gencost, build_group_table\n",
     "andes.config_logger(stream_level=20)\n",
     "\n",
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.1.post217+g98f65dff\n",
+      "1.7.1.post223.dev0+g89ef79bf\n",
       "2.8.0\n"
      ]
     }
@@ -116,10 +116,10 @@
      "text": [
       "Saved generated pycode to \"/Users/jinningwang/.andes/pycode\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
-      "Generated numerical code for 1 models in 0.4546 seconds.\n",
-      "Parsing input file \"/Users/jinningwang/Documents/work/andes/jwang/case/case2000.xlsx\"...\n",
-      "Input file parsed in 1.9849 seconds.\n",
-      "System internal structure set up in 0.0909 seconds.\n"
+      "Generated numerical code for 1 models in 0.1899 seconds.\n",
+      "Parsing input file \"/Users/jinningwang/Documents/work/andes/jwang/case/ieee14_pp.xlsx\"...\n",
+      "Input file parsed in 0.0621 seconds.\n",
+      "System internal structure set up in 0.0360 seconds.\n"
      ]
     }
    ],
@@ -130,7 +130,8 @@
     "case14 = andes.get_case('ieee14/ieee14_ac8b.xlsx')\n",
     "wecc = andes.get_case('wecc/wecc_full.xlsx')\n",
     "npcc = andes.get_case('npcc/npcc.xlsx')\n",
-    "ssa = andes.load(case2k,\n",
+    "case14 = '/Users/jinningwang/Documents/work/andes/jwang/case/ieee14_pp.xlsx'\n",
+    "ssa = andes.load(case14,\n",
     "                 setup=True,\n",
     "                 no_output=True,\n",
     "                 default_config=False)"
@@ -154,12 +155,12 @@
       "           Numba: Off\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0072 seconds.\n",
-      "0: |F(x)| = 35.37894339\n",
-      "1: |F(x)| = 0.2692108655\n",
-      "2: |F(x)| = 0.0002885472789\n",
-      "3: |F(x)| = 9.353549046e-10\n",
-      "Converged in 4 iterations in 0.0587 seconds.\n",
+      "Power flow initialized in 0.0038 seconds.\n",
+      "0: |F(x)| = 0.5605182607\n",
+      "1: |F(x)| = 0.006202201971\n",
+      "2: |F(x)| = 5.819385332e-06\n",
+      "3: |F(x)| = 6.964193111e-12\n",
+      "Converged in 4 iterations in 0.0097 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n"
      ]
     },
@@ -193,7 +194,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp.rundcopp(ssp)"
+    "ssa_key = make_link_table(ssa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p_mw</th>\n",
+       "      <th>q_mvar</th>\n",
+       "      <th>va_degree</th>\n",
+       "      <th>vm_pu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>30.436143</td>\n",
+       "      <td>-1.764070</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>12.597131</td>\n",
+       "      <td>-3.537129</td>\n",
+       "      <td>1.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>20.986594</td>\n",
+       "      <td>-6.452736</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>7.396392</td>\n",
+       "      <td>-1.539957</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>81.427213</td>\n",
+       "      <td>-21.617097</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        p_mw     q_mvar  va_degree  vm_pu\n",
+       "0  40.000000  30.436143  -1.764070   1.03\n",
+       "1  40.000000  12.597131  -3.537129   1.01\n",
+       "2  30.000000  20.986594  -6.452736   1.03\n",
+       "3  35.000000   7.396392  -1.539957   1.03\n",
+       "4  81.427213 -21.617097   0.000000   1.03"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssp.res_gen"
    ]
   },
   {
@@ -203,11 +294,144 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stg_idx</th>\n",
+       "      <th>p</th>\n",
+       "      <th>q</th>\n",
+       "      <th>vm_pu</th>\n",
+       "      <th>bus_idx</th>\n",
+       "      <th>controllable</th>\n",
+       "      <th>dg_idx</th>\n",
+       "      <th>syg_idx</th>\n",
+       "      <th>gov_idx</th>\n",
+       "      <th>exc_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.250537</td>\n",
+       "      <td>0.114989</td>\n",
+       "      <td>1.095812</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GENROU_2</td>\n",
+       "      <td>TGOV1_2</td>\n",
+       "      <td>EXST1_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.499999</td>\n",
+       "      <td>0.149999</td>\n",
+       "      <td>1.085312</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GENROU_3</td>\n",
+       "      <td>TGOV1_3</td>\n",
+       "      <td>ESST3A_3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.499999</td>\n",
+       "      <td>0.099999</td>\n",
+       "      <td>1.090565</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.080081</td>\n",
+       "      <td>1.099998</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GENROU_5</td>\n",
+       "      <td>TGOV1_5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>-0.075928</td>\n",
+       "      <td>1.100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GENROU_1</td>\n",
+       "      <td>TGOV1_1</td>\n",
+       "      <td>ESST3A_2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "67109.20999979675"
+       "  stg_idx         p         q     vm_pu bus_idx  controllable dg_idx  \\\n",
+       "0       2  0.250537  0.114989  1.095812       2          True    NaN   \n",
+       "1       3  0.499999  0.149999  1.085312       3          True    NaN   \n",
+       "2       4  0.499999  0.099999  1.090565       6          True  False   \n",
+       "3       5       0.5  0.080081  1.099998       8          True    NaN   \n",
+       "4       1       0.5 -0.075928  1.100000       1          True    NaN   \n",
+       "\n",
+       "    syg_idx  gov_idx   exc_idx  \n",
+       "0  GENROU_2  TGOV1_2   EXST1_1  \n",
+       "1  GENROU_3  TGOV1_3  ESST3A_3  \n",
+       "2     False      NaN       NaN  \n",
+       "3  GENROU_5  TGOV1_5         1  \n",
+       "4  GENROU_1  TGOV1_1  ESST3A_2  "
       ]
      },
      "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "runopp_map(ssp, ssa_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "225.05353523016953"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -242,12 +466,12 @@
       "           Numba: Off\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0063 seconds.\n",
-      "0: |F(x)| = 35.37894339\n",
-      "1: |F(x)| = 0.2692108655\n",
-      "2: |F(x)| = 0.0002885472789\n",
-      "3: |F(x)| = 9.353549046e-10\n",
-      "Converged in 4 iterations in 0.0461 seconds.\n",
+      "Power flow initialized in 0.0034 seconds.\n",
+      "0: |F(x)| = 0.5605182607\n",
+      "1: |F(x)| = 0.006202201971\n",
+      "2: |F(x)| = 5.819385332e-06\n",
+      "3: |F(x)| = 6.964193111e-12\n",
+      "Converged in 4 iterations in 0.0048 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n",
       "GSF is consistent.\n",
       "/Users/jinningwang/Documents/work/mambaforge/envs/andes/lib/python3.9/site-packages/pandas/core/indexes/base.py:6982: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
@@ -262,16 +486,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -285,26 +502,21 @@
      "text": [
       "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (mac64[arm])\n",
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 6413 rows, 544 columns and 82808 nonzeros\n",
-      "Model fingerprint: 0xa53fbf8f\n",
+      "Optimize a model with 33 rows, 5 columns and 101 nonzeros\n",
+      "Model fingerprint: 0x5316914a\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e-07, 1e+00]\n",
+      "  Matrix range     [4e-04, 1e+00]\n",
       "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [5e-03, 1e+01]\n",
-      "  RHS range        [2e+01, 4e+03]\n",
-      "\n",
-      "Concurrent LP optimizer: primal simplex, dual simplex, and barrier\n",
-      "Showing barrier log only...\n",
-      "\n",
-      "Presolve removed 6413 rows and 544 columns\n",
-      "Presolve time: 0.01s\n",
+      "  Bounds range     [1e-01, 2e+00]\n",
+      "  RHS range        [2e+00, 2e+01]\n",
+      "Presolve removed 33 rows and 5 columns\n",
+      "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    6.7109210e+02   0.000000e+00   0.000000e+00      0s\n",
+      "       0    2.2370000e+00   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved with dual simplex\n",
-      "Solved in 0 iterations and 0.04 seconds (0.01 work units)\n",
-      "Optimal objective  6.710921000e+02\n"
+      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
+      "Optimal objective  2.237000000e+00\n"
      ]
     },
     {
@@ -342,82 +554,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.5825</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.2573</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.6187</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.1000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1.4963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>539</th>\n",
-       "      <td>541</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>540</th>\n",
-       "      <td>542</td>\n",
-       "      <td>1.7460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541</th>\n",
-       "      <td>543</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>542</th>\n",
-       "      <td>544</td>\n",
-       "      <td>0.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>543</th>\n",
-       "      <td>379</td>\n",
-       "      <td>13.5430</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.837</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>544 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     gen       pg\n",
-       "0      1   1.5825\n",
-       "1      2   0.2573\n",
-       "2      3   0.6187\n",
-       "3      4   0.1000\n",
-       "4      5   1.4963\n",
-       "..   ...      ...\n",
-       "539  541   0.0000\n",
-       "540  542   1.7460\n",
-       "541  543   0.0000\n",
-       "542  544   0.0000\n",
-       "543  379  13.5430\n",
-       "\n",
-       "[544 rows x 2 columns]"
+       "   gen     pg\n",
+       "0    2  0.100\n",
+       "1    3  0.100\n",
+       "2    4  0.100\n",
+       "3    5  0.100\n",
+       "4    1  1.837"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
