--- a/jwang/notes2/co-sim_ieee39_ev_s.ipynb
+++ b/jwang/notes2/co-sim_ieee39_ev_s.ipynb
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.2.post241.dev0+g83a388ce\n",
+      "1.7.2.post242.dev0+g857748d7\n",
       "2.8.0\n"
      ]
     }
@@ -194,11 +194,11 @@
      "text": [
       "Saved generated pycode to \"/Users/jinningwang/.andes/pycode\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
-      "Generated numerical code for 1 models in 0.3498 seconds.\n",
+      "Generated numerical code for 1 models in 0.1462 seconds.\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/jwang/case/ieee39_ev2.xlsx\"...\n",
-      "Input file parsed in 0.0692 seconds.\n",
+      "Input file parsed in 0.0640 seconds.\n",
       "ACEc <1> added BusFreq <BusFreq_11> linked to bus <1>\n",
-      "System internal structure set up in 0.0245 seconds.\n"
+      "System internal structure set up in 0.0229 seconds.\n"
      ]
     },
     {
@@ -432,13 +432,13 @@
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
       "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.1647 seconds.\n",
+      "Power flow initialized in 0.0783 seconds.\n",
       "0: |F(x)| = 7.561249598\n",
       "1: |F(x)| = 2.916599385\n",
       "2: |F(x)| = 0.1314306449\n",
       "3: |F(x)| = 0.000346374201\n",
       "4: |F(x)| = 4.221392125e-09\n",
-      "Converged in 5 iterations in 0.0040 seconds.\n",
+      "Converged in 5 iterations in 0.0046 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n"
      ]
     },
@@ -791,13 +791,13 @@
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
       "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.0043 seconds.\n",
+      "Power flow initialized in 0.0040 seconds.\n",
       "0: |F(x)| = 7.561249598\n",
       "1: |F(x)| = 2.916599385\n",
       "2: |F(x)| = 0.1314306449\n",
       "3: |F(x)| = 0.000346374201\n",
       "4: |F(x)| = 4.221392125e-09\n",
-      "Converged in 5 iterations in 0.0043 seconds.\n",
+      "Converged in 5 iterations in 0.0035 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n",
       "GSF is consistent.\n"
      ]
@@ -1652,7 +1652,39 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning for adding constraints: zero or small (< 1e-13) coefficients, ignored\n",
+      "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (mac64[arm])\n",
+      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
+      "Optimize a model with 117 rows, 33 columns and 685 nonzeros\n",
+      "Model fingerprint: 0x465e3f9b\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [4e-03, 1e+00]\n",
+      "  Objective range  [1e-01, 2e+00]\n",
+      "  Bounds range     [4e-01, 3e+01]\n",
+      "  RHS range        [2e-02, 2e+03]\n",
+      "Presolve removed 117 rows and 33 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolve: All rows and columns removed\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    6.0389157e+01   0.000000e+00   0.000000e+00      0s\n",
+      "\n",
+      "Solved in 0 iterations and 0.01 seconds (0.00 work units)\n",
+      "Optimal objective  6.038915679e+01\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully solve RTED.\n"
+     ]
+    }
+   ],
    "source": [
     "# --- co-sim constants ---\n",
     "t_total = 3600    # total simulation time\n",
@@ -1661,7 +1693,7 @@
     "intv_ed = 300  # RTED interval, 300s\n",
     "intv_agc = 4    # AGC interval, 4s\n",
     "intv_pq = 1     # PQ interval, 1s; alter load and AGC\n",
-    "intv_step = 100 # step change interval; smooth the setpoitns\n",
+    "intv_step = 50 # step change interval; smooth the setpoitns\n",
     "\n",
     "# number of each interval\n",
     "n_ed = int(t_total/intv_ed)\n",
@@ -1671,7 +1703,11 @@
     "\n",
     "# --- vars ---\n",
     "# AGC table\n",
-    "agc_table = ssp.gen[['name']].rename(columns={'name':'stg_idx'})\n",
+    "agc_table = ssa_key2[['stg_idx', 'dg_idx', 'rg_idx', 'syg_idx', \n",
+    "                      'exc_idx', 'gov_idx', 'gammap', 'ctrl']]\n",
+    "dcres = ssd.get_res()\n",
+    "agc_table = agc_table.merge(dcres[['gen', 'bu', 'bd']].rename(columns={'gen': 'stg_idx'}),\n",
+    "                            on='stg_idx', how='left')\n",
     "agc_table['paux'] = 0\n",
     "# AGC power of each unit\n",
     "agc_res = pd.DataFrame(columns=['stg_idx'] + list(np.arange(0, t_total, 4)))\n",
@@ -1694,7 +1730,9 @@
     "\n",
     "# EV results\n",
     "ev_soc = pd.DataFrame(columns=range(t_total))\n",
-    "ev_agc = pd.DataFrame(columns=range(t_total))"
+    "ev_agc = pd.DataFrame(columns=range(t_total))\n",
+    "ev_soc[0] = sse.ev.soc\n",
+    "ev_agc[0] = sse.ev.agc\n"
    ]
   },
   {
@@ -1822,13 +1860,13 @@
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
       "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.0040 seconds.\n",
+      "Power flow initialized in 0.0045 seconds.\n",
       "0: |F(x)| = 7.959020156\n",
       "1: |F(x)| = 3.636894196\n",
       "2: |F(x)| = 0.209084611\n",
       "3: |F(x)| = 0.0009902656017\n",
       "4: |F(x)| = 4.145841714e-08\n",
-      "Converged in 5 iterations in 0.0034 seconds.\n",
+      "Converged in 5 iterations in 0.0039 seconds.\n",
       "Numba compilation initiated with caching.\n",
       "GENROU (xl <= xd2) out of typical upper limit.\n",
       "\n",
@@ -1844,7 +1882,7 @@
       " GENROU_10 | 0.013  | 0.000\n",
       "\n",
       "\n",
-      "Initialization for dynamics completed in 0.1615 seconds.\n",
+      "Initialization for dynamics completed in 0.1598 seconds.\n",
       "Initialization was successful.\n",
       "\n",
       "-> Time Domain Simulation Summary:\n",
@@ -1856,7 +1894,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a31890bdde82400eae85b4cad6fde682",
+       "model_id": "94010b44f40d480b9fb58774b0bbb38c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1871,7 +1909,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=0.00 sec completed in 0.0007 seconds.\n",
+      "Simulation to t=0.00 sec completed in 0.0012 seconds.\n",
       "\n",
       "-> Time Domain Simulation Summary:\n",
       "Sparse Solver: KLU\n",
@@ -1882,7 +1920,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6655956fd240407b812ffb63a990264b",
+       "model_id": "89db4a9f245a490c8ecdd6d2786ee86b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1898,13 +1936,13 @@
      "output_type": "stream",
      "text": [
       "Current step size is zero. Integration is not permitted.\n",
-      "Simulation to t=1.00 sec completed in 0.0378 seconds.\n"
+      "Simulation to t=1.00 sec completed in 0.0388 seconds.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ef0698a8f4d44ababeeb1558b178c6e",
+       "model_id": "1c720890da8443be98b364efe9beaa63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1919,13 +1957,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=2.00 sec completed in 0.0332 seconds.\n"
+      "Simulation to t=2.00 sec completed in 0.0345 seconds.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fc8c6b297ca493f8f6a2a5a351e8438",
+       "model_id": "2586234cdf8144639f2758cdcdeb0ad6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1940,13 +1978,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=3.00 sec completed in 0.0350 seconds.\n"
+      "Simulation to t=3.00 sec completed in 0.0362 seconds.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b9e07805cb64d6e92f71146a23c23db",
+       "model_id": "95fa51985e5243e19cdec3b4b428d808",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1961,13 +1999,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=4.00 sec completed in 0.0468 seconds.\n"
+      "Simulation to t=4.00 sec completed in 0.0359 seconds.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75f450d4f6d6487d9eacc293fa6ad1b5",
+       "model_id": "a20d20b889c94f198d1ab6ad96b7d937",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1982,13 +2020,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=5.00 sec completed in 0.0376 seconds.\n"
+      "Simulation to t=5.00 sec completed in 0.0355 seconds.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0e7bb851c264db4bd8b75bfbe30f439",
+       "model_id": "2c24b795533240f3854b6ada55d55003",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2003,13 +2041,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=6.00 sec completed in 0.0347 seconds.\n"
+      "Simulation to t=6.00 sec completed in 0.0351 seconds.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a34d63bcaffc44c59cdcb6b779a84c7d",
+       "model_id": "83f35cfb385b40a99e500d298b8d5c00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2024,13 +2062,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=7.00 sec completed in 0.0351 seconds.\n"
+      "Simulation to t=7.00 sec completed in 0.0363 seconds.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "062ca80b197b4044a386bd3a55cde00a",
+       "model_id": "4ccd4b38e5164f62bcf0ab41d9d5bdb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2045,13 +2083,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=8.00 sec completed in 0.0347 seconds.\n"
+      "Simulation to t=8.00 sec completed in 0.0362 seconds.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a82f5c0c11a94520a9f0e23717a7c0c7",
+       "model_id": "73eacebf242f47bcb118539d3b9b5ef1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2066,7 +2104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation to t=9.00 sec completed in 0.0348 seconds.\n"
+      "Simulation to t=9.00 sec completed in 0.0356 seconds.\n"
      ]
     }
    ],
@@ -2077,7 +2115,7 @@
     "# store original generator data\n",
     "ssp_gen0 = ssp.gen.copy()\n",
     "\n",
-    "for end_time in range(t_total):  # t_total\n",
+    "for end_time in range(10):  # t_total\n",
     "    # --- interval RTED ---\n",
     "    if end_time % intv_ed == 0:\n",
     "        idx_ed = end_time // intv_ed\n",
@@ -2148,43 +2186,38 @@
     "    if end_time % intv_agc == 0:\n",
     "        idx_agc = end_time // intv_agc - idx_ed * n_agc\n",
     "        # --- allocate AGC ---\n",
-    "        # --- calc. AGC ---\n",
+    "        # assign participation factor `bu`, `bd`\n",
+    "        agc_table.drop(['bu', 'bd'], axis=1, inplace=True)\n",
+    "        agc_table = agc_table.merge(dcres[['gen', 'bu', 'bd']].rename(columns={'gen': 'stg_idx'}),\n",
+    "                                    on='stg_idx', how='left')\n",
+    "        # calc. AGC ---\n",
     "        ACE_input = min(ACE_raw, dcres.pru.sum())\n",
     "        if ACE_raw >= 0:\n",
     "            ACE_input = min(ACE_raw, dcres.pru.sum())\n",
-    "            agc_table['paux'] = ACE_input * ace_gain * dcres.bu.values\n",
+    "            agc_table['paux'] = ACE_input * agc_table['bu'] * agc_table['gammap']\n",
     "        else:\n",
     "            ACE_input = max(ACE_raw, -1 * dcres.prd.sum())\n",
-    "            agc_table['paux'] = ACE_input * ace_gain * dcres.bd.values\n",
+    "            agc_table['paux'] = ACE_input * agc_table['bd'] * agc_table['gammap']\n",
     "        agc_res[end_time] = agc_table['paux']\n",
     "        sfr_res[end_time] = [end_time, ACE_raw, dcres.pru.sum(),\n",
     "                             -1*dcres.prd.sum(), ACE_input]\n",
     "\n",
     "        # --- assign AGC ---\n",
     "        # a.SynGen\n",
-    "        agc_syg = pd.merge(left=agc_table,\n",
-    "                           right=ssa_key2,\n",
-    "                           on='stg_idx', how='right')\n",
-    "        agc_syg['paux2'] = agc_syg.paux * agc_syg.gammap\n",
-    "        cond_gov = agc_syg.ctrl * agc_syg.gov_idx.astype(bool)\n",
-    "        agc_gov = agc_syg.gov_idx[cond_gov].tolist()\n",
-    "        ssa.TurbineGov.set(src='paux0', idx=agc_gov, attr='v',\n",
-    "                           value=agc_syg.paux2.values)\n",
+    "        # Note: now the condition is controllable & has governor\n",
+    "        cond_gov = agc_table.ctrl * agc_table.gov_idx.astype(bool)\n",
+    "        agc_gov_idx = agc_table.gov_idx[cond_gov].tolist()\n",
+    "        ssa.TurbineGov.set(src='paux0', idx=agc_gov_idx, attr='v',\n",
+    "                           value=agc_table.paux.values)\n",
     "        # b.DG;\n",
-    "        agc_dg = pd.merge(left=agc_table,\n",
-    "                          right=ssa_key2,\n",
-    "                          on='stg_idx', how='right')\n",
-    "        agc_dg['paux2'] = agc_dg.paux * agc_dg.gammap\n",
-    "        cond_dg = agc_dg.ctrl * agc_dg.dg_idx.astype(bool)\n",
-    "        agc_dg_idx = agc_dg.dg_idx[cond_dg].tolist()\n",
+    "        cond_dg = agc_table.ctrl * agc_table.dg_idx.astype(bool)\n",
+    "        agc_dg_idx = agc_table.dg_idx[cond_dg].tolist()\n",
     "        ssa.DG.set(src='pext0', idx=agc_dg_idx, attr='v',\n",
-    "                   value=agc_dg.paux2.values)\n",
+    "                   value=agc_table.paux.values)\n",
     "        # c.EV;\n",
-    "        agc_ev = pd.merge(left=agc_table,\n",
-    "                          right=ssa_key2,\n",
-    "                          on='stg_idx', how='right')\n",
-    "        agc_ev['paux2'] = agc_ev.paux * agc_ev.gammap\n",
-    "        sse_agc = agc_ev[agc_ev.stg_idx == ev_idx].paux2.values\n",
+    "        # Note: EV is in group DG, remove EV set if not used for EV SSM\n",
+    "        sse_agc = agc_table[agc_table.stg_idx == ev_idx].paux.values\n",
+    "        # TODO: RenGen\n",
     "\n",
     "        # --- smooth setpoints ---\n",
     "        if idx_ed == 0:\n",
@@ -2396,6 +2429,24 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# soc_plot = ev_soc\n",
+    "# soc_plot = soc_plot[list(range(end_time+1))]\n",
+    "\n",
+    "# fig_soc, ax_soc = plt.subplots(figsize=(5, 4))\n",
+    "# for i in range(soc_plot.shape[0]):\n",
+    "#     ax_soc.plot(range(end_time+1), soc_plot.iloc[i])\n",
+    "# ax_soc.set_xlabel('Time [s]')\n",
+    "# ax_soc.set_ylabel('SOC [%]')\n",
+    "# ax_soc.set_title('AGC EVs SOC')\n",
+    "# ax_soc.set_xlim([0, end_time])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2403,7 +2454,7 @@
        "Text(0.5, 0, 'Time [s]')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2432,7 +2483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2493,7 @@
        " <AxesSubplot:title={'center':'EVA'}, xlabel='Time [H]', ylabel='Power (MW)'>)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
