Fix ev control error

--- a/jwang/notes2/test_ev_ssm.ipynb
+++ b/jwang/notes2/test_ev_ssm.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,38 +32,20 @@
     "import pandas as pd\n",
     "\n",
     "from ev_ssm import ev_ssm\n",
-    "from ev_ssm import r_agc_sev"
+    "from ev_ssm import r_agc_sev\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "EVA: ts=10.0[H], 10000 EVs, Total Q=250.12 MWh\n",
-      "Online 1983, Q=49.73 MWh, SoC=0.9834\n",
-      "Power(MW): Pt=-0.3613, Pc=-0.3613, Pd=-0.0\n",
-      "Ctrl: 0=1921; 1=62; \n",
-      "EVA: Load A from Aest.csv.\n",
-      "EVA: end time 10.0[H] is too close to start time 10.0[H],simulation will not start.\n"
-     ]
-    }
-   ],
    "source": [
     "# --- Replay ---\n",
     "# Replay EV control signal from recorded data\n",
     "sse_out = pd.read_csv('sse_out.csv')\n",
+    "# sse_out = sse_out.iloc[3000:].reset_index(drop=True)\n",
     "\n",
     "t0 = sse_out['time'].iloc[0]\n",
     "sse = ev_ssm(ts=t0, N=10000, step=1, tp=40,\n",
@@ -73,12 +55,33 @@
     "ev_soc = pd.DataFrame(columns=range(sse_out.shape[0]))\n",
     "ev_agc = pd.DataFrame(columns=range(sse_out.shape[0]))\n",
     "\n",
-    "for row in range(sse_out.shape[0]):\n",
+    "for row in tqdm(range(sse_out.shape[0]), desc=f'{sse.name} Replay'):\n",
     "    sse.run(tf=sse_out.time.iloc[row], Pi=sse_out.Pr.iloc[row],\n",
     "            is_updateA=False, is_rstate=True,\n",
     "            is_test=False, disable=True)\n",
     "    ev_soc[row] = sse.ev.soc\n",
     "    ev_agc[row] = sse.ev.agc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_p, ax_p = plt.subplots(1, 1, figsize=(6, 3))\n",
+    "ax_p.plot(sse.tss, sse.Prl, label='Control')\n",
+    "ax_p.plot(sse.tss, sse.Prcl, label='Response')\n",
+    "ax_p.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sse.plot()"
    ]
   },
   {
